[metadata]
name = actions-server-rafal-zarajczyk
version = 0.0.1
author = Rafał Zarajczyk
author_email = rzarajczyk@gmail.com
description = A very simple, multi-threaded HTTP server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rzarajczyk/actions-server
project_urls =
    Bug Tracker = https://github.com/rzarajczyk/actions-server/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src